<resources>
    <string name="app_name">CAJA TIC</string>

    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="search_hint">Buscar</string>

    <string name="acercade">Acerca de la app</string>
    <string name="nombre_app">Caja TIC</string>
    <string name="menu">Menú</string>

    <!-- Menú de navegación lateral -->
    <string name="menu_volver">Volver a seleccionar niveles</string>
    <string name="menu_video">Video</string>
    <string name="menu_app_office">Aplicaciones office</string>
    <string name="menu_web">Sitios web de interés</string>
    <string name="menu_soft">Software/Simuladores</string>
    <string name="menu_pdf">Tutoriales para descargar</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="pd">Primaria Digital</string>
    <string name="ci">Conectar Igualdad</string>
    <string name="menu_audio">Audiolibro</string>
    <string name="nav_consulta">Envianos tu consulta</string>
    <string name="menu_version_app">Versión de la app: V 1.0.1 </string>
    <string name="buscar_menu">Buscar...</string>
    <string name="sin_internet">Sin Internet. Compruebe la conexion y vuelva a seleccionar una categoría desde el menú lateral izquierdo</string>

    <string name="KEY_API_YOUTUBE">AIzaSyALo8GHleJTNyaBmjoCZZS-gVhiRUyMnUc</string>

    <!--Activity enviar recurso -->

    <string name="usuario">Tu nombre</string>
    <string name="titulo_recurso">Título del recurso</string>
    <string name="url_recurso">Link del recurso (página web, youtube..)</string>
    <string name="categoria_recurso">Cetegoría del recurso y nivel educativo</string>
    <string name="descripcion_recurso">Descripción del recurso</string>


    <string name="colaboradores">Idea original: Cristian Farias \nDesarrolo: Guillermo López \nDiseño: Maria Laura Gonzalez \ Ministro....</string>


    <string name="que_es_la_app">Facilita a la comunidad educativa el acceso a un repositorio colaborativo de experiencias y recursos digitales, seleccionados  y organizados por niveles y áreas de conocimiento.

El mismo recupera las diversas experiencias docentes, las pone a disposición de toda la comunidad y posibilita su contextualización y adecuación pedagógica.

Es una herramienta colaborativa para toda  la comunidad educativa, en constante actualización y crecimiento…</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="array_st">
        <item>Problemas con el carro</item>
        <item>Maquinas bloqueadas</item>
        <item>Problema con el Servidor</item>
        <item>Problema con la Red</item>
        <item>Otro</item>
    </string-array>

    <string-array name="array_cap">
        <item>Gestión de ADM y construcción de propuestas pedagógicas con tic</item>
        <item>Uso didáctico de la pizarra digital</item>
        <item>Alfabetización digital inicial</item>
        <item>Botiquín sin internet</item>
        <item>Miradas cineticas</item>
        <item>Otro</item>
    </string-array>


    <!-- url de conexion a la bd -->
    <string name="URL_BASE">https://www.igualdadycalidadcba.gov.ar/CajaTIC/api/</string>


    <string name="URL_BASE1">http://www.muniap.com/api/</string>
    <string name="URL_POST_SEARCH">posts/getPostsSearch</string>
    <string name="URL_GET_ALL_POST">posts/getPostsSeccion</string>
    <string name="URL_GET_ALL_POST_APRENDER_CONECTADPS">posts/aprenderConectados</string>
    <string name="URL_GET_ALL_POST_LEVEL">posts/getPostsLevel</string>
    <string name="URL_GET_ALL_NOVEDADES">posts/getNovedades</string>
    <string name="URL_GET_ALL_NE">posts/getNuestraEscuela</string>
    <string name="URL_GET_COLE">posts/getColegio</string>
    <string name="URL_GET_INSTITUCION">getColegios</string>
    <string name="URL_TIPO_PROBLEMA_RECLAMO">getProblemasReclamos</string>

    <string name="JSON_SECCION">GetPostSeccion.php?</string>
    <string name="JSON_BUSQUDA_SECCION">NuevaBusquedaPost.php?</string>
    <string name="JSON_FILTRO_POST">GetPostFiltrado.php?</string>

    <string name="JSON_NE_DA">NEDocAcompa.php?</string>
    <string name="JSON_NE_RP">NERecurProvin.php?</string>
    <string name="JSON_POST_X_NIVEL">GetPostXNivel.php?</string>

    <string name="CANTIDAD_POST">15</string>
    <string name="URL_VIDEO">/consultaVideoVivo.php</string>

    <!-- secciones de la bd para filtros (son los que estan en la tabla Activity-->
    <string name="FILTRO_GENERAL">General</string> <!--General seria web, o lo q tenga un xml definido y la info este en internet -->
    <string name="FILTRO_Video">Video</string>
    <string name="FILTRO_Audio">Audio</string>
    <string name="FILTRO_Pdf">Pdf</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="novedades">Novedades</string>
    <string name="title_activity_recursos_provinciales">RecursosProvincialesActivity</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="URL_PRUEBA">http://www.muniap.com/api/posts/getPostsSeccion</string>
    <string name="title_activity_novedad">NovedadActivity</string>
    <string name="title_activity_nedrawer">NEDrawerActivity</string>


    <string name="nav_header_title">Jornadas Institucionales</string>
    <string name="nav_header_subtitle">Menú</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_nepestana">NEPestanaActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_menu_st">MenuST</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_borrar_st">borrarSt</string>

    <string name="facebook_app_id">239821496694286</string>
    <string name="fb_login_protocol_scheme">fb239821496694286</string>


</resources>

