<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_back"
            android:icon="@drawable/ic_first_page_black_24dp"
            android:title="@string/menu_volver" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_video_library_black_24dp"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_office"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_app_office" />
        <item
            android:id="@+id/nav_soft"
            android:icon="@drawable/soft"
            android:title="@string/menu_soft" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
