<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gru.cajaaplicacionestics.view.EnviarRecursosActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay">


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--El layout_behavior es para que el scrol empiece desce abajo del toolbar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_compartir">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recursoEnviarTxtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_compartir">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recursoEnviarTxtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titulo_recurso"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_compartir">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recursoEnviarTxtUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url_recurso"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_compartir">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recursoEnviarTxtCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/categoria_recurso"
                   />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_compartir">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recursoEnviarTxtDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion_recurso"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/recursoEnviarBtnEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="Enviar"
               />

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
